Inclusión de foto alojada en facebook

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>Post en html</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam id velit libero commodi non? Obcaecati esse inventore molestiae cum deleniti sint eligendi dolorum pariatur, tempore itaque? Minima voluptate sed tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, vitae sapiente aspernatur dolor fuga numquam laborum corporis soluta eveniet. Minus assumenda perferendis deleniti sed repellendus quod quo, molestiae cupiditate repellat.</p>
         <p id="nuevo_p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At alias sint consequatur dicta assumenda quaerat, enim numquam reiciendis laudantium voluptate delectus eveniet temporibus, fugit rerum impedit libero ullam modi eius!</p>
+        <img src="https://scontent.fbog3-2.fna.fbcdn.net/v/t1.18169-9/548033_10151184897303015_865360260_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=f798df&_nc_ohc=IGPfW95QK1AQ7kNvgFJjsSd&_nc_ht=scontent.fbog3-2.fna&oh=00_AYDvms0O1uLY7z7SUgvF3JHeFeLqJIni4n7q6Mi1WA0zAg&oe=66A6A5FF" alt="Perfil Gemma Clavero" width="100%"/>
     </div>
     <footer>
         <p>Hola: Soy Anita, acabo de empezar y estoy trabajando mi footer con mucho ♥️</p>
